修改properties文件为ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 target/
+/taotao-manager/taotao-manager-web/src/main/resources/properties
+/taotao-rest/src/main/resources/properties
+/taotao-portal/src/main/resources/properties
