--- a/taotao-manager/taotao-manager-web/src/main/resources/properties/resource.properties
+++ b/taotao-manager/taotao-manager-web/src/main/resources/properties/resource.properties
@@ -5,4 +5,4 @@ FTP_USER_NAME=ftpuser
 FTP_PASSWORD=ftpuser
 FTP_BASE_PATH=/home/ftpuser/www/images
 #\u56fe\u7247\u670d\u52a1\u5668\u7684url
-IMAGE_SERVER_BASE_URL=http://192.168.1.130/
+IMAGE_SERVER_BASE_URL=http://www.taotao.qiaohao8.cn:81/
