--- a/taotao-rest/src/main/resources/properties/db.properties
+++ b/taotao-rest/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/taotao?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://test.qiaohao8.com:3306/taotao?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=Weixinapp_$_0325%
