--- a/taotao-manager/taotao-manager-web/pom.xml
+++ b/taotao-manager/taotao-manager-web/pom.xml
@@ -46,4 +46,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+    <build>
+        <plugins>
+            <!-- 配置Tomcat插件 -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <port>8084</port>
+                    <path>/</path>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
