--- a/taotao-manager/taotao-manager-web/src/main/resources/properties/client.conf
+++ b/taotao-manager/taotao-manager-web/src/main/resources/properties/client.conf
@@ -1,8 +1,8 @@
 #fastDFS配置信息
 charset = UTF-8
-tracker_server=132.229.165.99:22122
+tracker_server=fastdfs-tracker:22122
 http.tracker_http_port = 80
 connect_timeout = 5
 network_timeout = 300
-http.anti_steal_token = no
-http.secret_key = FastDFS1234567890
+#http.anti_steal_token = no
+#http.secret_key = FastDFS1234567890
