--- a/taotao-rest/src/main/resources/properties/db.properties
+++ b/taotao-rest/src/main/resources/properties/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://132.229.165.99:3401/taotao?characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=15335176800
+jdbc.url=jdbc:mysql://mysql:3306/taotao?characterEncoding=utf-8
+jdbc.username=taotao
+jdbc.password=taotao
