--- a/taotao-rest/src/main/resources/properties/resource.properties
+++ b/taotao-rest/src/main/resources/properties/resource.properties
@@ -5,7 +5,7 @@ FTP_USER_NAME=ftpuser
 FTP_PASSWORD=ftpuser
 FTP_BASE_PATH=/home/ftpuser/www/images
 #\u56fe\u7247\u670d\u52a1\u5668\u7684url
-IMAGE_SERVER_BASE_URL=http://132.229.165.99/
+IMAGE_SERVER_BASE_URL=http://image.taotao.com/
 
 #put content cache into redis key
 REDIS_CONTENT_KEY=REDIS_CONTENT_KEY
