修改taotao-manager的log4j配置

--- a/taotao-manager/taotao-manager-web/src/main/resources/properties/log4j.properties
+++ b/taotao-manager/taotao-manager-web/src/main/resources/properties/log4j.properties
@@ -2,14 +2,23 @@ log4j.rootLogger=debug, stdout, R
 
 
 # set the log level for these components
-log4j.logger.com.endeca=INFO
-log4j.logger.com.endeca.itl.web.metrics=INFO
+#log4j.logger.com.endeca=INFO
+#log4j.logger.com.endeca.itl.web.metrics=INFO
+
+log4j.logger.com.taotao=DEBUG
+log4j.logger.org.springframework=INFO
+log4j.logger.org.mybatis=INFO
+log4j.logger.org.apache.ibatis=INFO
+log4j.logger.java.sql=INFO
+
+
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+#log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n 
+log4j.appender.stdout.layout.ConversionPattern=%-5p: %c - %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
 log4j.appender.R.File=${catalina.home}/logs/taotao-manager-web.log
