--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
+                <scope>test</scope>
+            </dependency>
 			<!-- 日志处理 -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
