--- a/taotao-portal/src/main/resources/properties/log4j.properties
+++ b/taotao-portal/src/main/resources/properties/log4j.properties
@@ -1,18 +1,23 @@
-log4j.rootLogger=debug, stdout, R
+log4j.rootLogger=warn, stdout, R
 
 
 # set the log level for these components
-log4j.logger.com.endeca=INFO
-log4j.logger.com.endeca.itl.web.metrics=INFO
+log4j.logger.com.taotao=debug
+log4j.logger.org.springframework=info
+log4j.logger.org.mysql=info
+log4j.logger.org.mybatis=info
+log4j.logger.org.apache.ibatis=info
+
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+# log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%-5p: %c - %m%n
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=${catalina.home}/logs/taotao-portal.log
+log4j.appender.R.File=${catalina.home}/logs/taotao-search.log
 
 log4j.appender.R.MaxFileSize=100KB
 # Keep one backup file
