--- a/taotao-manager/taotao-manager-web/src/main/resources/properties/resource.properties
+++ b/taotao-manager/taotao-manager-web/src/main/resources/properties/resource.properties
@@ -7,4 +7,4 @@ FTP_USER_NAME=ftpuser
 FTP_PASSWORD=ftpuser
 FTP_BASE_PATH=/home/ftpuser/www/images
 #\u56fe\u7247\u670d\u52a1\u5668\u7684url
-IMAGE_SERVER_BASE_URL=http://image.taotao.com/
+IMAGE_SERVER_BASE_URL=http://image.taotao.qiaohao8.net/
