--- a/taotao-manager/taotao-manager-web/src/main/resources/properties/resource.properties
+++ b/taotao-manager/taotao-manager-web/src/main/resources/properties/resource.properties
@@ -1,4 +1,4 @@
-REST_BASE_URL=http://localhost:8081/rest
+REST_BASE_URL=http://rest.taotao.com/rest
 REST_UPDATESOLR_URL=/item/updatesolr/
 #FTP\u7684\u76f8\u5173\u914d\u7f6e
 FTP_ADDRESS=192.168.25.133
