--- a/taotao-portal/src/main/resources/properties/resource.properties
+++ b/taotao-portal/src/main/resources/properties/resource.properties
@@ -1,7 +1,7 @@
-REST_BASE_URL=http://localhost:8081/rest
+REST_BASE_URL=http://rest.taotao.com/rest
 
 REST_CONTENT_URL=/content/
 
 REST_CONTENT_AD1_CID=89
 
-SEARCH_BASE_URL=http://localhost:8083/search/q
+SEARCH_BASE_URL=http://search.taotao.com/search/q
