--- a/taotao-portal/src/main/resources/properties/resource.properties
+++ b/taotao-portal/src/main/resources/properties/resource.properties
@@ -5,3 +5,25 @@ REST_CONTENT_URL=/content/
 REST_CONTENT_AD1_CID=89
 
 SEARCH_BASE_URL=http://search.taotao.com/search/q
+
+
+REST_ITEM_BASE_URL=/item/base/
+
+REST_ITEM_DESC_URL=/item/desc/
+
+REST_ITEM_PARAM_URL=/item/param/
+
+STATIC_PAGE_PATH=D:/temp/html/
+
+COOKIE_EXPIRE=432000
+
+SSO_BASE_URL=http://sso.taotao.com
+SSO_REDIRICT_URL=http://sso.taotao.com
+#\u6839\u636etoken\u53d6\u7528\u6237\u7684\u670d\u52a1
+SSO_TOKEN_USER_URL=/user/token/
+#SSO\u767b\u5f55\u9875\u9762url
+SSO_LOGIN_PAGE_URL=/user/page/login
+
+ORDER_BASE_URL=http://order.taotao.com/order
+
+ORDER_CREATE_URL=/create
